2004-10-03  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp: Select the first local or remote address
	book when deleting an address book.

2004-10-03  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-eds.cpp: Cleanups.

2004-10-02  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp: Fixed toolbar annoyance reported by Josep.

2004-09-30  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-remote.cpp: Fixed search filter for ILS.

2004-09-30  Damien Sandras  <dsandras@gnome.org>

	* src/stunclient.cpp: Improved NAT detection message.

	* src/main_window.cpp: Made icons bigger in the toolbar, reported
	by Josep and Kilian. Thanks!

	* NEWS: Update with CVS news.

	* configure.in: New version.

2004-09-30  Damien Sandras  <dsandras@gnome.org>

	* src/druid.cpp, src/stunclient.cpp, src/stunclient.h: Added NAT
	configuration assistant.

2004-09-30  Damien Sandras  <dsandras@gnome.org>

	* po/POTFILES.in: Added src/stunclient.* to POTFILES.in.

	* src/Makefile.am: Added src/stunclient.* to the build.

	* src/config.cpp: Changed to "apply" type of setting for
	the STUN server.

	* src/druid.cpp: Removed welcome message.

	* src/endpoint.cpp, src/endpoint.h: Changed to use the new
	GMStunClient threaded class.

	* src/pref_window.cpp: Added Apply button for the STUN settings.

	* src/stunclient.*: Added new threaded class for STUN support.

2004-09-29  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Incremented version number.

2004-09-29  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-remote.cpp: Fixed search on LDAP servers.

	* src/callbacks.cpp: Updated email of Vincent Deroo.

	* src/main_window.cpp: Converted toolbar code to GTK+2.4, fixed
	remaining problems with the new history combo box, and removed now
	unuseful hack as the problem has been adressed by GTK+2.4.

2004-09-28  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp: Calls the selected URL in a combo box.
