@@ -1,5 +1,14 @@
 2004-10-03  Damien Sandras  <dsandras@gnome.org>
 
+	* src/addressbook_window.cpp: Changed column size to dynamic.
+
+2004-10-03  Damien Sandras  <dsandras@gnome.org>
+
+	* lib/contacts/gm_contacts-remote.cpp: Fixed invalid UTF-8 problems
+	with ILS. Thanks to Johnny for reporting this.
+
+2004-10-03  Damien Sandras  <dsandras@gnome.org>
+
 	* src/addressbook_window.cpp: Select the first local or remote address
 	book when deleting an address book.
 
